force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__BrowserVendorName__c.field-meta.xml
<CustomField>
    <fullName>ssot__BrowserVendorName__c</fullName>
    <label>Browser Vendor Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BrowserVendorName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>