force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__DeviceLocaleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceLocaleId__c</fullName>
    <label>Device Locale</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceLocaleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>