force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__DeviceOSName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceOSName__c</fullName>
    <label>Device OS Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceOSName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>