force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__DeviceStateProvinceName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceStateProvinceName__c</fullName>
    <label>Device State Province</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceStateProvinceName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>