force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__DeviceType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceType__c</fullName>
    <label>Device Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>