force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__EngagementChannelAction__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementChannelAction__c</fullName>
    <label>Engagement Channel Action</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementChannelAction</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>