force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__EventLocalDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EventLocalDateTime__c</fullName>
    <label>Event Local Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EventLocalDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>