force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__IsVisible__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visible</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsVisible</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>