force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__PersonalizationContentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonalizationContentId__c</fullName>
    <label>Personalization Content</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonalizationContentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>