force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__rel_1726212150136_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726212150136_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MediaEngagement_ElectronicMediaId_ma_rel</label>
    <referenceTo>ssot__ElectronicMedia__dlm</referenceTo>
    <relationshipLabel>MediaEngagement_ElectronicMediaId_ma_rel</relationshipLabel>
    <relationshipName>rel_1726212150136_end</relationshipName>
    <type>Lookup</type>
</CustomField>