force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__rel_1726212156564_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726212156564_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MediaEngagement_IndividualId_map_Ind_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>MediaEngagement_IndividualId_map_Ind_rel</relationshipLabel>
    <relationshipName>rel_1726212156564_end</relationshipName>
    <type>Lookup</type>
</CustomField>