force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__rel_1732260222931_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260222931_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MediaEngagement_EngagementChannelAct_rel</label>
    <referenceTo>ssot__EngagementChannelAction__dlm</referenceTo>
    <relationshipLabel>MediaEngagement_EngagementChannelAct_rel</relationshipLabel>
    <relationshipName>rel_1732260222931_end</relationshipName>
    <type>Lookup</type>
</CustomField>