force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__SoftwareApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SoftwareApplicationId__c</fullName>
    <label>Software Application</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SoftwareApplicationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>