force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__UserName__c.field-meta.xml
<CustomField>
    <fullName>ssot__UserName__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UserName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>