force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__VideoCompletedPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__VideoCompletedPercent__c</fullName>
    <label>Video Completed Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VideoCompletedPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>