force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__VideoDurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__VideoDurationMinutes__c</fullName>
    <label>Video Duration Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VideoDurationMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>