force-app/main/default/objects/ssot__MediaEngagement__dlm/fields/ssot__VideoElapsedTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__VideoElapsedTimeMinutes__c</fullName>
    <label>Video Elapsed Time Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VideoElapsedTimeMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>